--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main>
       <div class="grid">
         <!-- Turn indicator -->
-        <div class="turn" data-id="turn">
-          <i class="fa-solid fa-x turquoise"></i>
+        <div class="turn yellow" data-id="turn">
+          <i class="fa-solid fa-x"></i>
           <p class="turquoise">Player 1, you're up!</p>
         </div>
 
@@ -76,7 +76,7 @@
     </footer>
 
     <!-- Modal that opens when game ends -->
-    <div class="modal hidden">
+    <div class="modal hidden" data-target="modal">
       <div class="modal-contents">
         <p data-id="modal-text">Player 1 wins!</p>
         <button data-id="modal-btn">Play again</button>
